# SimpleGameEngine

./: CMakeLists.txt
dependency/include/assimp/: Exporter.hpp  cimport.h
dependency/include/glad/: glad.c  glad.h
dependency/include/glm/: glm.hpp
dependency/include/glm/detail/: func_common.hpp
dependency/include/stb/: stb_image.h
resources/shaders/: colorShader.frag  colorShader.vert  textureShader.frag  textureShader.vert
src/: main.cpp
src/Application/: Application.cpp  Application.h
src/Error/: Error.cpp  Error.h
src/Game/: Game.cpp  Game.h
src/Game/GameObject/: GameObject.cpp  GameObject.h
src/Game/GameObject/Camera/: Camera.cpp  Camera.h
src/Game/GameObject/Model/: Model.cpp  Model.h
src/Game/GameObject/Model/Mesh/: Mesh.cpp  Mesh.h
src/Game/GameObject/Model/Vertex/: Vertex.cpp  Vertex.h
src/Game/Input/: Input.cpp  Input.h
src/Game/Light/: Light.cpp  Light.h
src/Game/Light/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.h
src/Game/Light/PointLight/: PointLight.cpp  PointLight.h
src/Game/Light/SpotLight/: SpotLight.cpp  SpotLight.h
src/Game/Material/: Material.cpp  Material.h
src/Game/Material/ColorMaterial/: ColorMaterial.cpp  ColorMaterial.h
src/Game/Material/TextureMaterial/: TextureMaterial.cpp  TextureMaterial.h
src/Game/Scene/: Scene.cpp  Scene.h
src/Game/Screen/: Screen.cpp  Screen.h
src/Game/Shader/: Shader.cpp  Shader.h
src/Game/Texture/: Texture.cpp  Texture.h
src/Game/Time/: Time.cpp  Time.h
src/Managers/: Managers.cpp  Managers.h
src/Managers/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/Managers/ShaderManager/: ShaderManager.cpp  ShaderManager.h
src/utils/: utils.h
